--- a/index.html
+++ b/index.html
@@ -5,24 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel=https://api.openweathermap.org/data/2.5/onecall?lat={lat}&lon={lon}&exclude={part}&appid={API key} />
-    <title>Weather Dashboard</title>
-    <link rel="stylesheet" href="style.css" />
-    <script src="script.js"></script>
-</head>
-
-<body>
-
-    <script src="script.js"></script>
-</body>
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -45,7 +29,8 @@
             <div class="humidty">Humidity: 60%</div>
             <div class="wind">Wind speed: 6.2 km/h</div>
         </div>
-
+        <script src="config.js"></script>
+        <script src="script.js"></script>
 </body>
 
 </html>
